samples/_failures_safe/1761294843_a83c6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a34e219.c: In function ‘main’:
./samples/SAFE/__tmp_0a34e219.c:135:30: error: ‘MAX_’ undeclared (first use in this function)
  135 |     struct log_entry entries[MAX_
      |                              ^~~~
./samples/SAFE/__tmp_0a34e219.c:135:30: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0a34e219.c:135:34: error: expected ‘]’ at end of input
  135 |     struct log_entry entries[MAX_
      |                                  ^
      |                                  ]
./samples/SAFE/__tmp_0a34e219.c:135:12: error: expected declaration or statement at end of input
  135 |     struct log_entry entries[MAX_
      |            ^~~~~~~~~
